feat: integrate Flyway and Hibernate Envers audit logging
- Add flyway-core, flyway-database-postgresql, hibernate-envers deps to pom.xml
- Configure Flyway (baseline-on-migrate v2) and Envers audit table settings
- Add application-prod and application-staging property files
- Externalize CORS allowed origins via cors.allowed-origins config property
- Add CustomRevisionEntity and CustomRevisionListener for per-request audit metadata
- Add AuditTableInitializer to create generated action_type columns at startup
- Add .DS_Store to .gitignore